// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkPaginationIndicator should render correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "backgroundColor": "rgb(230, 228, 235)",
      "borderRadius": 40,
      "height": 6,
      "marginHorizontal": 2,
      "width": 6,
    }
  }
/>
`;

exports[`iOS BpkPaginationIndicator should render correctly with selected 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "backgroundColor": "rgb(255, 255, 255)",
      "borderRadius": 40,
      "height": 6,
      "marginHorizontal": 2,
      "width": 6,
    }
  }
/>
`;

exports[`iOS BpkPaginationIndicator should render correctly with size=base 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "backgroundColor": "rgb(230, 228, 235)",
      "borderRadius": 40,
      "height": 6,
      "marginHorizontal": 2,
      "width": 6,
    }
  }
/>
`;

exports[`iOS BpkPaginationIndicator should render correctly with size=invisible 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "backgroundColor": "rgb(230, 228, 235)",
      "borderRadius": 40,
      "height": 0,
      "marginHorizontal": 2,
      "width": 0,
    }
  }
/>
`;

exports[`iOS BpkPaginationIndicator should render correctly with size=md 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "backgroundColor": "rgb(230, 228, 235)",
      "borderRadius": 40,
      "height": 3,
      "marginHorizontal": 2,
      "width": 3,
    }
  }
/>
`;

exports[`iOS BpkPaginationIndicator should render correctly with size=sm 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "backgroundColor": "rgb(230, 228, 235)",
      "borderRadius": 40,
      "height": 2,
      "marginHorizontal": 2,
      "width": 2,
    }
  }
/>
`;
